[tool.poetry]
name = "flowsint"
version = "0.1.0"
description = "Flowsint multi-module project"
authors = ["EliottElek <dexxterrmorgan@proton.me>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flowsint-core = { path = "./flowsint-core", develop = true }
flowsint-types = { path = "./flowsint-types", develop = true }
flowsint-transforms = { path = "./flowsint-transforms", develop = true }
flowsint-api = { path = "./flowsint-api", develop = true }
pydantic = {extras = ["email"], version = "^2.11.7"}
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
